--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,7 @@ wheels/
 *.egg
 
 # Virtual Environment
-venv/
-env/
-ENV/
+.venv/
 
 # IDE
 .idea/
@@ -43,3 +41,11 @@ ENV/
 
 # Documentation
 docs/todo_sentiment_analysis.md 
+
+uv.lock
+
+.pytest_cache/
+
+__pycache__/
+
+.env
