--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.12",
+    "httpx>=0.28.1",
     "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
+    "structlog>=25.2.0",
 ]
 
 [build-system]
@@ -20,3 +23,18 @@ packages = ["src/sentiment_analysis"]
 pythonpath = ["src"]
 testpaths = ["tests"]
 python_files = "test_*.py"
+
+[tool.black]
+line-length = 88
+target-version = ['py312']
+include = '\.pyi?$'
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = "E203"
+exclude = [
+    ".git",
+    "__pycache__",
+    "build",
+    "dist",
+]
