--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.12",
     "httpx>=0.28.1",
+    "pydantic>=2.11.3",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.26.0",
     "structlog>=25.2.0",
