--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "pydantic>=2.11.3",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.26.0",
+    "python-dotenv>=1.1.0",
     "structlog>=25.2.0",
+    "uvicorn>=0.34.2",
 ]
 
 [build-system]
