--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.12",
+    "flake8>=7.2.0",
     "httpx>=0.28.1",
     "openai>=1.76.0",
     "pydantic>=2.11.3",
