--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -26,7 +26,7 @@ jobs:
           uv pip install pytest pytest-cov flake8
       - name: Lint with flake8
         run: |
-          uv run python -m flake8 src tests
+          uv run python -m flake8 src tests flake8 src --ignore=W293,E501,W504,W503
       - name: Test with pytest
         run: |
           uv run pytest --cov=src --cov-report=xml
