--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -34,7 +34,7 @@ jobs:
       
       - name: Test image
         run: |
-          docker run --rm ${{ env.DOCKER_IMAGE }}:latest python -c "import sentiment_analysis; print('Successfully imported sentiment_analysis')"
+          docker run --rm ${{ env.DOCKER_IMAGE }}:latest uv run python -c "import sentiment_analysis; print('Successfully imported sentiment_analysis')"
       
       - name: Extract metadata for Docker
         id: meta
